add login api endpoint in user modules
