# pkg/controllers/user-controller.go
@@ -9,6 +9,7 @@ import (
 	"github.com/gorilla/mux"
 	"github.com/rushabh2390/gousersmodule/pkg/models"
 	"github.com/rushabh2390/gousersmodule/pkg/utils"
+
 )
 
 // @Summary Get Users
@@ -18,7 +19,7 @@ import (
 // @Produce json
 // @Success 200 {array} models.User
 // @Failure 500 {object} models.ErrorResponse
-// @Router /users/ [get]
+// @Router /users [get]
 func GetUsers(w http.ResponseWriter, r *http.Request) {
 	users := models.GetUsers()
 	res, _ := json.Marshal(users)
@@ -72,7 +73,7 @@ func GetUserById(w http.ResponseWriter, r *http.Request) {
 // @Param user body models.User true "User"
 // @Success 200 {object} models.User
 // @Failure 400 {object} models.ErrorResponse
-// @Router /users/ [post]
+// @Router /users [post]
 func CreateUser(w http.ResponseWriter, r *http.Request) {
 	createuser := &models.User{}
 	utils.ParseBody(r, createuser)
@@ -149,30 +150,29 @@ func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(res)
 }
 
-// @Summary Update User
-// @Description Update an existing user
+// @Summary Login User
+// @Description Authenticates a user and returns a JWT token
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param id path int true "User ID"
-// @Param user body models.User true "User"
-// @Success 200 {object} models.User
+// @Param credentials body models.Credentials true "Login Credentials"
+// @Success 200 {object} models.JWTResponse
 // @Failure 400 {object} models.ErrorResponse
-// @Failure 404 {object} models.ErrorResponse
-// @Router /users/{id} [put]
+// @Failure 401 {object} models.ErrorResponse
+// @Router /login [post]
 func LoginUser(w http.ResponseWriter, r *http.Request) {
-	updateuser := &models.User{}
-	utils.ParseBody(r, updateuser)
-	u, err := updateuser.UpdateUser()
+	logincredentials := &models.Credentials{}
+	utils.ParseBody(r, logincredentials)
+	claim, err := logincredentials.LoginUser()
 	if err != nil {
 		res, _ := json.Marshal(&models.ErrorResponse{
 			Message: "get error while getting User by id"})
 		w.Header().Set("Content-Type", "application.json")
-		w.WriteHeader(http.StatusNotFound)
+		w.WriteHeader(http.StatusUnauthorized)
 		w.Write(res)
 		// log.Fatal("")
 	}
-	res, _ := json.Marshal(u)
+	res, _ := json.Marshal(claim)
 	w.Header().Set("Content-Type", "application.json")
 	w.WriteHeader(http.StatusOK)
 	w.Write(res)
